# aims_etl_dq_2026

./: .env.example  .gitignore  CHANGELOG.md  CRITICAL_ANALYSIS.md  FABRIC_COMPATIBILITY_ANALYSIS.md  FABRIC_FIXES_SUMMARY.md  FABRIC_MIGRATION_GUIDE.md  GAPS_AND_IMPROVEMENTS.md  MANIFEST.in  Makefile  ORCHESTRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_COMPLETE.md  WEEK2_IMPLEMENTATION.md  azure-pipelines.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  test_nb_imports.py
.github/: copilot-instructions.md
abc64232-25a2-499d-90ae-9fe5939ae437/: .workspace-info
aims_data_platform/: __init__.py  cli.py  config.py  data_quality.py  fabric_config.py  ingestion.py  landing_zone_manager.py  schema_reconciliation.py  watermark_manager.py
config/: notification_config.yaml.example
docs/: AIMS Data Model.txt  AIMS_ARCHITECTURE_DIAGRAM.md  AIMS_Data_Model_Actual.txt  ARCHITECTURE_DIAGRAM.txt  COMPLETE_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_SUMMARY_DEC2025.md  EXECUTIVE_SUMMARY.md  FABRIC_DEPLOYMENT_GUIDE.md  FABRIC_MIGRATION_GUIDE.md  GAPS_AND_IMPROVEMENTS.md  Notebook 9.ipynb  PHASES_2_3_EXECUTION_REPORT.md  POWERBI_SEMANTIC_MODEL_GUIDE.txt  PROFILING_QUICK_START.md  PROJECT_STATE_ANALYSIS.md  README_PROFILING.md  STAKEHOLDER_DASHBOARD.html  STAKEHOLDER_PRESENTATION.md  START_HERE.md  pipeline_flow.md
notebooks/: 00_AIMS_Orchestration.ipynb  01_AIMS_Data_Profiling.ipynb  02_AIMS_Data_Ingestion.ipynb  03_AIMS_Monitoring.ipynb  03_AIMS_Monitoring_backup2.ipynb  03_AIMS_Monitoring_backup3.ipynb  03_AIMS_Monitoring_old.ipynb  README.md  (+6 more)
(+219 files in other folders)
